force-app/main/default/objects/Task_List_Template_Item__c/Task_List_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Task List Template Item</label>
    <nameField>
        <displayFormat>TLTI-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task List Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>