force-app/main/default/objects/Task_List_Template_Item__c/fields/Assignee_Field__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Field__c</fullName>
    <inlineHelpText>API field name with user</inlineHelpText>
    <label>Assignee Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>