force-app/main/default/objects/Task_List_Template_Item__c/fields/Assignee_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Type__c</fullName>
    <label>Assignee Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Owner</fullName>
                <default>true</default>
                <label>Record Owner</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Related Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>