force-app/main/default/objects/Task_List_Template_Item__c/fields/Assignee_User__c.field-meta.xml
<CustomField>
    <fullName>Assignee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Task_List_Template_Items</relationshipName>
    <type>Lookup</type>
</CustomField>