force-app/main/default/objects/Task_List_Template_Item__c/fields/Depends_On__c.field-meta.xml
<CustomField>
    <fullName>Depends_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depends On</label>
    <referenceTo>Task_List_Template_Item__c</referenceTo>
    <relationshipLabel>Task List Template Items</relationshipLabel>
    <relationshipName>Task_List_Template_Items</relationshipName>
    <type>Lookup</type>
</CustomField>