force-app/main/default/objects/Task_List_Template_Item__c/fields/Task_List_Template__c.field-meta.xml
<CustomField>
    <fullName>Task_List_Template__c</fullName>
    <label>Task List Template</label>
    <referenceTo>Task_List_Template__c</referenceTo>
    <relationshipLabel>Task List Template Items</relationshipLabel>
    <relationshipName>Task_List_Template_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>