force-app/main/default/objects/Task_List_Template_Item__c/fields/Task_List_Template_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_List_Template_Item_Name__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; &amp; Id , Subject__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task List Template Item Name</label>
    <type>Text</type>
</CustomField>