force-app/main/default/objects/Task_List_Template_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flow_Name__c</columns>
    <columns>Task_Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>